# vgautam.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  TODO  birding.html  contact.html  index.html  map.html  music.html  pyproject.toml  recognition.html  service.html  style.css  website.py  work.html
.circleci/: config.yml
static/css/: style.css
static/js/: script.js
templates/: 404.html  birding.html  contact.html  cv.html  index.html  layout.html  music.html  recognition.html  service.html  work.html
